# dagster-snowflake-dbt-demo

./: .daggerignore  .gitignore  DAGGER_README.md  GH_CODESPACES.md  QUICK_START.md  README.md  dagger.json
.dagger/: pyproject.toml
.dagger/src/dagster_demo/: __init__.py  main.py
.devcontainer/: devcontainer.json  devcontainer.simple.json  setup-simple.sh  setup.sh
.github/workflows/: dagger-ci.yml
dagster-demo/: README.md  pyproject.toml  test_integration.py
dagster-demo/dagster_demo/: definitions.py
dagster-demo/dagster_demo.egg-info/: SOURCES.txt
dagster-demo/src/dagster_demo/: definitions.py
dagster-demo/src/dagster_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dagster-demo/src/dagster_demo/defs/: partitions.py  project.py  resources.py
dagster-demo/src/dagster_demo/defs/assets/: constants.py  dbt.py  french_tech_report.py  partitioned_dbt_assets.py
dagster-demo/tests/: test_assets.py
data/: dbt_demo.duckdb
dbt_demo/: .user.yml  dbt_project.yml  profiles.yml
dbt_demo/models/marts/: french_tech_companies_summary.sql
dbt_demo/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_french_companies_by_year.sql  stg_french_data_companies.sql
scripts/: run-ci.sh  run-step.sh
