[project]
name = "dagster_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver",
    "dagster-dbt",
    "dbt-core",
    "dbt-duckdb",
    "dbt-snowflake",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_demo.definitions"
code_location_name = "dagster_demo"

[tool.setuptools.packages.find]
where = ["src"]
exclude=["dagster_demo_tests"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
